--- a/TilbudsApp/View/MainPage.xaml
+++ b/TilbudsApp/View/MainPage.xaml
@@ -8,22 +8,21 @@
     x:Class="TilbudsApp.MainPage"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <Page.DataContext>
-        <ViewModel:ButikViewModel/>
-    </Page.DataContext>
+  
+
+
+
 
 
     <Grid>
-        <ListView Background="AntiqueWhite" x:Name="ListviewOverByer" HorizontalAlignment="Left" Height="600" VerticalAlignment="Top" Width="400" Margin="236,252,0,0" ItemsSource="{Binding ButikSingleton.ByerCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Selectedby, Mode=TwoWay}"/>
-        <ListView Background="AntiqueWhite" x:Name="ListViewOverButikker" HorizontalAlignment="Left" Height="600" Margin="947,252,0,0" VerticalAlignment="Top" Width="400" ItemsSource="{Binding ButikSingleton.ButikCollection, Mode=TwoWay}" SelectionChanged="ListViewOverButikker_SelectionChanged">
+
+        <ListView Background="AntiqueWhite" HorizontalAlignment="Left" Height="600" VerticalAlignment="Top" Width="400" Margin="236,252,0,0" ItemsSource="{Binding ButikSingleton.ByerCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Selectedby}"/>
+        <ListView Background="AntiqueWhite" HorizontalAlignment="Left" Height="600" Margin="947,252,0,0" VerticalAlignment="Top" Width="400" ItemsSource="{Binding ButikSingleton.ButikCollection, Mode=TwoWay}">
            
         </ListView>
-        <TextBlock x:Name="Byer" HorizontalAlignment="Left" Margin="236,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="256" Height="98" SelectionChanged="TextBlock_SelectionChanged" FontSize="72">
-            <Run Text="Byer"/>
-            <LineBreak/>
-            <Run/>
-        </TextBlock>
-        <TextBox HorizontalAlignment="Left" Margin="562,154,0,0" TextWrapping="Wrap" Text="Roskilde" VerticalAlignment="Top" Height="29" Width="90"/>
+        <!--<TextBlock x:Name="Byer" HorizontalAlignment="Left" Margin="236,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="256" Height="98" SelectionChanged="TextBlock_SelectionChanged" FontSize="72" Text="Byer">
+            
+        </TextBlock>-->
 
     </Grid> 
 
