--- a/TilbudsApp/View/MainPage.xaml
+++ b/TilbudsApp/View/MainPage.xaml
@@ -1,29 +1,38 @@
 ﻿<Page
+    x:Class="TilbudsApp.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TilbudsApp"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ViewModel="using:TilbudsApp.ViewModel"
-    x:Class="TilbudsApp.MainPage"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-  
-
-
-
-
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:TilbudsApp"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
 
     <Grid>
 
-        <ListView Background="AntiqueWhite" HorizontalAlignment="Left" Height="600" VerticalAlignment="Top" Width="400" Margin="236,252,0,0" ItemsSource="{Binding ButikSingleton.ByerCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Selectedby}"/>
-        <ListView Background="AntiqueWhite" HorizontalAlignment="Left" Height="600" Margin="947,252,0,0" VerticalAlignment="Top" Width="400" ItemsSource="{Binding ButikSingleton.ButikCollection, Mode=TwoWay}">
-           
-        </ListView>
+        <ListView
+            Width="556"
+            Height="600"
+            Margin="80,252,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="Navy"
+            Foreground="Black"
+            ItemsSource="{x:Bind ViewModel.ButikSingleton.ButikCollection, Mode=OneWay}" />
+
+        <ListView
+            Width="602"
+            Height="600"
+            Margin="828,252,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="Navy"
+            ItemsSource="{x:Bind ViewModel.ButikSingleton.ByerCollection, Mode=OneWay}" />
         <!--<TextBlock x:Name="Byer" HorizontalAlignment="Left" Margin="236,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="256" Height="98" SelectionChanged="TextBlock_SelectionChanged" FontSize="72" Text="Byer">
-            
+
         </TextBlock>-->
 
-    </Grid> 
+    </Grid>
 
 </Page>
