--- a/TilbudsApp/View/MainPage.xaml
+++ b/TilbudsApp/View/MainPage.xaml
@@ -4,26 +4,28 @@
     xmlns:local="using:TilbudsApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ViewModel="using:TilbudsApp.ViewModel"
     x:Class="TilbudsApp.MainPage"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-  
-
-
-
-
 
     <Grid>
 
-        <ListView Background="AntiqueWhite" HorizontalAlignment="Left" Height="600" VerticalAlignment="Top" Width="400" Margin="236,252,0,0" ItemsSource="{Binding ButikSingleton.ByerCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Selectedby}"/>
-        <ListView Background="AntiqueWhite" HorizontalAlignment="Left" Height="600" Margin="947,252,0,0" VerticalAlignment="Top" Width="400" ItemsSource="{Binding ButikSingleton.ButikCollection, Mode=TwoWay}">
-           
-        </ListView>
+        <ListView Background="AntiqueWhite" 
+                  HorizontalAlignment="Left" 
+                  Height="600" VerticalAlignment="Top" 
+                  Width="400" Margin="236,252,0,0" 
+                  ItemsSource="{x:Bind ViewModel.ButikSingleton.ByerCollection, Mode=OneWay}" 
+                  SelectedItem="{x:Bind ViewModel.SelectedItem, Mode=TwoWay}"/>
+
+        <ListView Background="AntiqueWhite" 
+                  HorizontalAlignment="Left" 
+                  Height="600" Margin="947,252,0,0" 
+                  VerticalAlignment="Top" Width="400"
+                  ItemsSource="{x:Bind ViewModel.ButikSingleton.ButikCollection, Mode=OneWay}" />
         <!--<TextBlock x:Name="Byer" HorizontalAlignment="Left" Margin="236,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="256" Height="98" SelectionChanged="TextBlock_SelectionChanged" FontSize="72" Text="Byer">
             
         </TextBlock>-->
 
-    </Grid> 
+    </Grid>
 
 </Page>
