--- a/TilbudsApp/View/MinButik.xaml
+++ b/TilbudsApp/View/MinButik.xaml
@@ -17,8 +17,8 @@
         <TextBox HorizontalAlignment="Left" Margin="43,250,0,0" TextWrapping="Wrap" PlaceholderText="Navn" VerticalAlignment="Top" Height="96" Width="392" FontSize="36" Text="{Binding Iname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox HorizontalAlignment="Left" Margin="45,365,0,0" TextWrapping="Wrap" PlaceholderText="Id" VerticalAlignment="Top" Height="96" Width="392" FontSize="36" Text="{Binding Id, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox HorizontalAlignment="Left" Margin="45,495,0,0" TextWrapping="Wrap" PlaceholderText="Beskrivelse"  VerticalAlignment="Top" Height="220" Width="392" FontSize="36" TextChanged="TextBox_TextChanged" Text="{Binding Beskrivelse, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <AppBarButton HorizontalAlignment="Left" Height="115" Icon="Add" Label="Tilføj Item" Margin="215,751,0,0" VerticalAlignment="Top" Width="170" Command="{Binding CreateItemCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <ListView HorizontalAlignment="Left" Height="505" VerticalAlignment="Top" Width="505" Margin="745,248,0,0" ItemsSource="{Binding ItemSingleton.ItemCollection, Mode=TwoWay}"/>
+        <AppBarButton HorizontalAlignment="Left" Height="115" Icon="Add" Label="Tilføj Item" Margin="215,751,0,0" VerticalAlignment="Top" Width="170" Command="{Binding CreateItemCommand}"/>
+        <ListView Background="AntiqueWhite" HorizontalAlignment="Left" Height="505" VerticalAlignment="Top" Width="505" Margin="745,248,0,0" ItemsSource="{Binding ItemSingleton.ItemCollection, Mode=TwoWay}"/>
     </Grid>
 
 
