--- a/TilbudsApp/View/MinButik.xaml
+++ b/TilbudsApp/View/MinButik.xaml
@@ -5,12 +5,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ViewModel="using:TilbudsApp.ViewModel"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     x:Class="TilbudsApp.View.MinButik"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Page.DataContext>
         <ViewModel:OpretItem/>
     </Page.DataContext>
+
     <Grid HorizontalAlignment="Left" Height="1000" VerticalAlignment="Top" Width="1500">
         <TextBlock HorizontalAlignment="Left" Margin="650,0,0,0" TextWrapping="Wrap" Text="Opret Item" VerticalAlignment="Top" Height="100" Width="250" SelectionChanged="TextBlock_SelectionChanged" FontSize="48"/>
         <TextBlock HorizontalAlignment="Left" Height="70" Margin="50,140,0,0" TextWrapping="Wrap" Text="Tilføj Vare" VerticalAlignment="Top" Width="300" FontSize="48" SelectionChanged="TextBlock_SelectionChanged_1"/>
@@ -18,7 +21,14 @@
         <TextBox HorizontalAlignment="Left" Margin="45,365,0,0" TextWrapping="Wrap" PlaceholderText="Id" VerticalAlignment="Top" Height="96" Width="392" FontSize="36" Text="{Binding Id, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox HorizontalAlignment="Left" Margin="45,495,0,0" TextWrapping="Wrap" PlaceholderText="Beskrivelse"  VerticalAlignment="Top" Height="220" Width="392" FontSize="36" TextChanged="TextBox_TextChanged" Text="{Binding Beskrivelse, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <AppBarButton HorizontalAlignment="Left" Height="115" Icon="Add" Label="Tilføj Item" Margin="215,751,0,0" VerticalAlignment="Top" Width="170" Command="{Binding CreateItemCommand}"/>
-        <ListView Background="AntiqueWhite" HorizontalAlignment="Left" Height="505" VerticalAlignment="Top" Width="505" Margin="745,248,0,0" ItemsSource="{Binding ItemSingleton.ItemCollection, Mode=TwoWay}"/>
+        <ListView x:Name="ItemListView" Background="AntiqueWhite" HorizontalAlignment="Left" Height="505" VerticalAlignment="Top" Width="505" Margin="745,248,0,0" ItemsSource="{Binding ItemSingleton.ItemCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <interactivity:Interaction.Behaviors>
+                <core:EventTriggerBehavior EventName="SelectionChanged">
+                    <core:InvokeCommandAction Command="{Binding SelectItemCommand}" CommandParameter="{Binding ElementName=ItemListView}"/>
+                </core:EventTriggerBehavior>
+            </interactivity:Interaction.Behaviors>
+        </ListView>
+        <AppBarButton x:Name="DeleteItemBtn" HorizontalAlignment="Left" Height="115" Icon="Remove" Label="Fjern Item" Margin="1265,619,0,0" VerticalAlignment="Top" Width="170" Command="{Binding DeleteItemCommand}"/>
     </Grid>
 
 
