--- a/TilbudsApp/View/MinButik.xaml
+++ b/TilbudsApp/View/MinButik.xaml
@@ -16,11 +16,11 @@
 
     <Grid HorizontalAlignment="Left" Height="1000" VerticalAlignment="Top" Width="1500">
         <TextBlock HorizontalAlignment="Left" Margin="650,0,0,0" TextWrapping="Wrap" Text="Opret Item" VerticalAlignment="Top" Height="100" Width="250" SelectionChanged="TextBlock_SelectionChanged" FontSize="48"/>
-        <TextBlock HorizontalAlignment="Left" Height="70" Margin="50,140,0,0" TextWrapping="Wrap" Text="Tilføj Vare" VerticalAlignment="Top" Width="300" FontSize="48" SelectionChanged="TextBlock_SelectionChanged_1"/>
+        <TextBlock HorizontalAlignment="Left" Height="70" Margin="50,140,0,0" TextWrapping="Wrap" Text="{Binding overskrift, Mode=TwoWay}" VerticalAlignment="Top" Width="300" FontSize="48" SelectionChanged="TextBlock_SelectionChanged_1"/>
         <TextBox HorizontalAlignment="Left" Margin="43,250,0,0" TextWrapping="Wrap" PlaceholderText="Navn" VerticalAlignment="Top" Height="96" Width="392" FontSize="36" Text="{Binding Iname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox HorizontalAlignment="Left" Margin="45,365,0,0" TextWrapping="Wrap" PlaceholderText="Id" VerticalAlignment="Top" Height="96" Width="392" FontSize="36" Text="{Binding Id, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox HorizontalAlignment="Left" Margin="45,495,0,0" TextWrapping="Wrap" PlaceholderText="Beskrivelse"  VerticalAlignment="Top" Height="220" Width="392" FontSize="36" TextChanged="TextBox_TextChanged" Text="{Binding Beskrivelse, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <AppBarButton HorizontalAlignment="Left" Height="115" Icon="Add" Label="Tilføj Item" Margin="215,751,0,0" VerticalAlignment="Top" Width="170" Command="{Binding CreateItemCommand}"/>
+        <AppBarButton HorizontalAlignment="Left" Height="115" Icon="Add" Label="Tilføj Item" Margin="490,264,0,0" VerticalAlignment="Top" Width="170" Command="{Binding CreateItemCommand}" RenderTransformOrigin="0.588,-1.965"/>
         <ListView x:Name="ItemListView" Background="AntiqueWhite" HorizontalAlignment="Left" Height="505" VerticalAlignment="Top" Width="505" Margin="745,248,0,0" ItemsSource="{Binding ItemSingleton.ItemCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <interactivity:Interaction.Behaviors>
                 <core:EventTriggerBehavior EventName="SelectionChanged">
@@ -28,7 +28,8 @@
                 </core:EventTriggerBehavior>
             </interactivity:Interaction.Behaviors>
         </ListView>
-        <AppBarButton x:Name="DeleteItemBtn" HorizontalAlignment="Left" Height="115" Icon="Remove" Label="Fjern Item" Margin="1265,619,0,0" VerticalAlignment="Top" Width="170" Command="{Binding DeleteItemCommand}"/>
+        <AppBarButton x:Name="DeleteItemBtn" HorizontalAlignment="Left" Height="115" Icon="Remove" Label="Fjern Item" Margin="1260,621,0,0" VerticalAlignment="Top" Width="170" Command="{Binding DeleteItemCommand}"/>
+        <Button Content="MainPage" HorizontalAlignment="Left" Margin="55,35,0,0" VerticalAlignment="Top" Height="90" Width="215" RenderTransformOrigin="-0.034,0.357" FontSize="36" Click="ButtonBase_OnClick"/>
     </Grid>
 
 
